crates/xmtp_macro/tests/ui/retryable/default_on_variant.rs
use xmtp_macro::Retryable;

#[derive(Retryable)]
enum E {
    #[retry(default = true)]
    Variant,
}

fn main() {}
